# MiniOS

./: CMakeLists.txt  README.md
src/: main.cpp
src/extra_commands/: extra_commands.cpp  extra_commands.h
src/functions/: functions.cpp  functions.h
